<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RadioActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nhan_xet_ve_cong_cu_android_studio"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="18dp"/>

    <RadioButton
        android:id="@+id/radio1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tuong_doi"
        android:textSize="22sp"/>
    <RadioButton
        android:id="@+id/radio2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tot"
        android:textSize="22sp"/>
    <RadioButton
        android:id="@+id/radio3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rat_tot"
        android:textSize="22sp"/>
    <RadioButton
        android:id="@+id/radio4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tuyet_voi"
        android:textSize="22sp"/>
    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vote"
        android:layout_gravity="center"
        android:backgroundTint="#9C27B0"/>
    <TextView
        android:id="@+id/tvYourChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_choice"
        android:background="#2196F3"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingVertical="10dp"/>
</LinearLayout>