<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CheckBoxs">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/do_you_like_watching_film_on_which_app"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="18dp"/>
    <CheckBox
        android:id="@+id/chkFilm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/film"
        android:textStyle="bold"/>
    <CheckBox
        android:id="@+id/chkFPT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fpt_play"
        android:textStyle="bold"/>
    <CheckBox
        android:id="@+id/chkClip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clip_tv"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_gravity="center"
        android:backgroundTint="#9C27B0"/>
    <TextView
        android:id="@+id/tvYourChoice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_choice"
        android:background="#2196F3"
        android:textStyle="bold"
        android:textSize="20sp"
        android:paddingVertical="10dp"/>
</LinearLayout>