<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="30dp"
        android:layout_height="80dp"
        android:text="@string/_1"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        android:background="#FF5722"
        android:textColor="#FFFFFF"
        android:layout_weight="1"/>
    <TextView
        android:layout_width="30dp"
        android:layout_weight="1"
        android:layout_height="80dp"
        android:text="@string/_2"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        android:background="#123722"
        android:textColor="#FFFFFF"/>
    <TextView
        android:layout_width="30dp"
        android:layout_weight="1"
        android:layout_height="80dp"
        android:text="@string/_3"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        android:background="#365722"
        android:textColor="#FFFFFF"/>
    <TextView
        android:layout_width="30dp"
        android:layout_weight="1"
        android:layout_height="80dp"
        android:text="@string/_4"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        android:background="#FFEB3B"
        android:textColor="#FFFFFF"/>
</LinearLayout>